--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - uses: actions/checkout@v3
 
