--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,46 +1,38 @@
-name: Build Iframely Image
+name: Create and publish a Docker image
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['release']
 
 env:
-  IMAGE_NAME: iframely
-  GITHUB_REGISTRY: ghcr.io
-  GITHUB_PROJECT: iframely-server
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
-    name: Build
+  build-and-push-image:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    runs-on: ubuntu-latest
+      # 
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
-
-      - uses: actions/checkout@v3
-
-      - name: Build and Push the Docker Image
-        uses: docker/build-push-action@v4
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
-          file: Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/${{ env.GITHUB_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ env.GITHUB_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
