--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,6 +17,10 @@ jobs:
       contents: read
       packages: write
     steps:
+      - name: Set up QEMU (for non-native architectures)
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Log in to the Container registry
@@ -31,11 +35,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
