--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,10 +17,6 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Set up QEMU (for non-native architectures)
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Log in to the Container registry
@@ -35,11 +31,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
           file: Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
