Add public flag to make the image public

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -46,3 +46,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+
+          # Make the image public
+          public: true
